updated nav bar

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
               <a class="page-scroll" href="#about">About</a>
             </li>
             <li>
-              <a class="page-scroll" href="#generalRules">Regras</a>
+              <a class="page-scroll" href="#generalRules">Schedule</a>
             </li>
             <li>
-              <a class="page-scroll" href="#schedule">Agenda</a>
+              <a class="page-scroll" href="#schedule">Learn</a>
             </li>
             <li>
-              <a class="page-scroll" href="#projects">Projetos</a>
+              <a class="page-scroll" href="#projects">FAQ</a>
             </li>
             <li>
-              <a class="page-scroll" href="#location">Localização</a>
+              <a class="page-scroll" href="#location">Code of Conduct</a>
             </li>
             <li>
               <a class="page-scroll" href="#contact">Contact</a>
@@ -113,7 +113,7 @@
     <section id="about" class="container content-section text-center">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>O Hackathon</h2>
+          <h2>About GNPL Hackathon 2019</h2>
           <p>É com muita animação que o GNPL Brasil em parceria com a <a href="https://www.absamhost.com.br">AbsamHost</a> e do Diretório Acadêmico do curso de Engenharia de Computação da UEFS anuncia o <strong>GNPL Hackathon</strong> durante a XVII SIECOMP. O GNPL Hackathon irá acontecer dentro da XVII SIECOMP nos dias 16 e 17 de Março.</p>
 
           <p>As inscrições estão abertas à todos os participantes da XVII SIECOMP e devem ser feitas através do nosso <a href="https://goo.gl/forms/tvWTE4Dml3IRjMGn2">formulário de inscrição</a>. Durante todo o hackathon o time do GNPL Brasil e seus parceiros estarão dando apoio técnico, mentoria e ideação.</p>
@@ -299,7 +299,7 @@
     <section id="contact" class="darker-black container content-section text-center">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>GNPL Brasil</h2>
+          <h2>GNPL</h2>
           <p>Feel free to get in touch with us.</p>
           <p><a href="http://www.matrixlabs.ai/contact.html">http://www.matrixlabs.ai/contact.html</a>
           </p>
