--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
     <section id="contact" class="darker-black container content-section text-center">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>GNPL</h2>
+          <h2>GNPL Levels</h2>
           <p>Feel free to get in touch with us.</p>
-          <p><a href="http://www.matrixlabs.ai/contact.html">http://www.matrixlabs.ai/contact.html</a>
+          <p><a href="http://www.matrixlabs.ai/contact.html">put link to get in touch here</a>
           </p>
         </div>
       </div>
