--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
-            <h2>Localização</h2>
-            <p>Universidade Estadual de Feira de Santana <strong>(LABOTEC III - Laboratório de Redes)</strong></p>
+            <h2>Location</h2>
+            <p>Great Neck Public Library <strong>Levels</strong></p>
           </div>
         </div>
       </div>
