--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
               <a class="page-scroll" href="#about">About</a>
             </li>
             <li>
-              <a class="page-scroll" href="#generalRules">Schedule</a>
+              <a class="page-scroll" href="#generalRules">Learn</a>
             </li>
             <li>
-              <a class="page-scroll" href="#schedule">Learn</a>
+              <a class="page-scroll" href="#schedule">Schedule</a>
             </li>
             <li>
               <a class="page-scroll" href="#projects">FAQ</a>
@@ -113,16 +113,17 @@
     <section id="about" class="container content-section text-center">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>About GNPL Hackathon 2019</h2>
-          <p>É com muita animação que o GNPL Brasil em parceria com a <a href="https://www.absamhost.com.br">AbsamHost</a> e do Diretório Acadêmico do curso de Engenharia de Computação da UEFS anuncia o <strong>GNPL Hackathon</strong> durante a XVII SIECOMP. O GNPL Hackathon irá acontecer dentro da XVII SIECOMP nos dias 16 e 17 de Março.</p>
+          <h2>GNPL Hackathon 2019</h2>
+          <h3>3/1/19 - 3/2/19</h3>
+          <p>Welcome to Great Neck Library's inaugural hackathon! This year's focus will be on </p>
 
-          <p>As inscrições estão abertas à todos os participantes da XVII SIECOMP e devem ser feitas através do nosso <a href="https://goo.gl/forms/tvWTE4Dml3IRjMGn2">formulário de inscrição</a>. Durante todo o hackathon o time do GNPL Brasil e seus parceiros estarão dando apoio técnico, mentoria e ideação.</p>
+          <!-- <p>As inscrições estão abertas à todos os participantes da XVII SIECOMP e devem ser feitas através do nosso <a href="https://goo.gl/forms/tvWTE4Dml3IRjMGn2">formulário de inscrição</a>. Durante todo o hackathon o time do GNPL Brasil e seus parceiros estarão dando apoio técnico, mentoria e ideação.</p>
 
           <p><strong>Desafio:</strong> Construa um app para o <a href="http://creator.matrix.one">MATRIX Creator</a> que ajude a melhorar o dia-a-dia das pessoas no qual use pelo menos três recursos da <a href="https://matrix-io.github.io/matrix-documentation/">API do MATRIX Cretor</a> e uma API de qualquer serviço externo de sua escolha.</p>
 
           <p><strong>Prêmio:</strong> O time vencedor receberá 1 kit MATRIX Creator e R$ 500 reais de servidor na AbsamHost. O segundo lugar receberá 1 kit MATRIX Creator. O terceiro colocado receberá R$ 250 reais de servidor na AbsamHost. Cada kit MATRIX Creator conta com: MATRIX Creator + Raspberry Pi 3 + Raspberry Pi Câmera V2 + Cartão de Memória de 32GB + Fonte de Alimentação.</p>
 
-          <p><a href="#modal" data-toggle="modal">Confira a lista dos selecionados!</a></p>
+          <p><a href="#modal" data-toggle="modal">Confira a lista dos selecionados!</a></p> -->
 
           <!-- Modal -->
           <div class="modal fade" id="modal" tabindex="-1" role="dialog" >
@@ -169,15 +170,15 @@
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
-            <h2>Regras</h2>
-            <p>Todas as equipes devem ter 4 pessoas.</p>
+            <h2>Schedule</h2>
+            <!-- <p>Todas as equipes devem ter 4 pessoas.</p>
             <p>Todas as equipes devem mandar seus times para o email (<strong>diego.leite@admobilize.com</strong>), para poder participar do evento. O título deve ser o nome do projeto. O corpo do e-mail deve conter uma descrição de até 140 caracteres sobre o projeto e o nome de cada integrante do time.</p>
             <p>Para receber o kit MATRIX Creator de trabalho cada integrante do time deverá assinar o termo de responsabilidade que será fornecido no dia do hackathon.</p>
             <p>Para que a equipe possa iniciar os trabalhos deve ser criado um repositório aberto no github. O link deve ser enviado na mesma thread de e-mail até o horário limite descrito na agenda do hackathon.</p>
             <p>Para que o projeto possa ser apresentado na sessão de pitches o app desenvolvido deve ter sido publicado na <a href="http://apps.matrix.one">MATRIX App Store</a>. O link gerado deve ser enviado na mesma thread de e-mail até o horário descrito na agenda do hackathon.</p>
             <p>Todas as equipes convocadas para a sessão de pitch terá que apresentar uma demonstração de sua solução e slides não serão permitidos. A apresentação será de 5 minutos + 3 minutos de sessão de perguntas e respostas dos jurados.</p>
             <p>As equipes vencedoras estarão sujeitas a uma revisão de código em algum momento após o evento, ou imediatamente antes de receber o prêmio.</p>
-            <p>É proibido o uso de código pronto! Todos iniciarão a maratona de programação ao mesmo tempo. Isso garante a imparcialidade da competição. Não participe da competição se for reutilizar um projeto já existente.</p>
+            <p>É proibido o uso de código pronto! Todos iniciarão a maratona de programação ao mesmo tempo. Isso garante a imparcialidade da competição. Não participe da competição se for reutilizar um projeto já existente.</p> -->
           </div>
         </div>
       </div>
