--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
-            <h2>Schedule</h2>
+            <h2>Learn</h2>
             <!-- <p>Todas as equipes devem ter 4 pessoas.</p>
             <p>Todas as equipes devem mandar seus times para o email (<strong>diego.leite@admobilize.com</strong>), para poder participar do evento. O título deve ser o nome do projeto. O corpo do e-mail deve conter uma descrição de até 140 caracteres sobre o projeto e o nome de cada integrante do time.</p>
             <p>Para receber o kit MATRIX Creator de trabalho cada integrante do time deverá assinar o termo de responsabilidade que será fornecido no dia do hackathon.</p>
@@ -189,8 +189,8 @@
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
-            <h2>Agenda</h2>
-            <p>De 16 a 17 de Março de 2017</p>
+            <h2>Schedule</h2>
+            <p>3/1/19 to 3/2/19</p>
             <div class="agenda">
               <div class="row">
                 <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">16/03/2017 - 8:30am</div>
@@ -250,33 +250,8 @@
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
-            <h2 class="text-center">Projetos</h2>
-            <p>
-              <a href="https://github.com/PedroPCardoso/moodify"><strong>Moodify</strong></a> </br>
-              <strong>Team: </strong>Pedro Cardoso, Luan Rios, Rejanio Moraes </br>
-              <strong>Description: </strong>Recognize user's mood, search for Spotify playlists to help his day. These playlists are found by user's interest, crossing information like geolocation and most played songs.
-            </p>
-            <p>
-              <a href="https://github.com/vjoao/maternity-sentinel"><strong>Maternity Sentinel</strong></a> </br>
-              <strong>Team: </strong>João Victor Mota, Lucas Carneiro, Lucas Vinicius, Nilson Augusto </br>
-              <strong>Description: </strong>A device responsible by monitoring maternity environment. The main features are: Facial recognition for medical responsible team, verification for humidity and temperature to certify the ideal conditions for maternity.
-            </p>
-            <p>
-              <a href="https://github.com/weversongomes/pillcontroller"><strong>PillController</strong></a> </br>
-              <strong>Team: </strong>Weverson Gomes, José Victor, Roberto Nunes, Iago Rios </br>
-              <strong>Description: </strong>The main purpose is control lockers that keeps pills and helps users not forget to take his medicines.
-            </p>
-            <p>
-              <a href="https://github.com/Figueiredovr/slider"><strong>Slider</strong></a> </br>
-              <strong>Team: </strong>Victor R. Figueiredo, Lucas A. Silva, Leandro Sampaio, Matheus Galvão</br>
-              <strong>Description: </strong>Control Google Slide presentations with gestures.
-            </p>
-            <p>
-              <a href="https://github.com/lucaspaiva1/hackathon"><strong>SmartOffice</strong></a> </br>
-              <strong>Team: </strong>Lucas Paiva, Francisco Alberto, Lindelmo Silva, Cleybson Leite </br>
-              <strong>Description: </strong>Automate an office, you will be able to control room temperature and light using the smartphone. Another great feature is the ability to unlock the office door using facial recognition.
-            </p>
-          </div>
+            <h2 class="text-center">FAQs</h2>
+                      </div>
         </div>
       </div>
     </section>
@@ -288,13 +263,12 @@
           <div class="col-lg-8 col-lg-offset-2">
             <h2>Location</h2>
             <p>Great Neck Public Library <strong>Levels</strong></p>
+            <!-- insert picture of library here -->
           </div>
         </div>
       </div>
     </section>
 
-    <div id="map">
-    </div>
 
     <!-- Contact Section -->
     <section id="contact" class="darker-black container content-section text-center">
