--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="That's a landing page for our first GNPL Hackathon">
+    <meta name="description" content="That's a landing page for our first GNPL Hack-A-Thon">
     <meta name="author" content="Shylee Ezroni & Alan Golman">
 
-    <title>GNPL Hackathon 2019</title>
+    <title>GNPL Hack-A-Thon 2019</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +55,8 @@
             Menu <i class="fa fa-bars"></i>
           </button>
           <a class="navbar-brand page-scroll text-center" href="#page-top">
-            <img id="everloop" src="img/everloop.png"/> <span class="hidden-xs hidden-sm "><span class="light">GNPL</span> Hackathon </span>
+            <img id="everloop" src="img/everloop.png"/> <span class="hidden-xs hidden-sm "><span class="light">GNPL</span> Hack-A-Thon </span>
+
           </a>
         </div>
 
@@ -97,7 +98,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 col-lg-12">
-              <!-- <h1 class="brand-heading">GNPL Hackathon</h1>
+              <!-- <h1 class="brand-heading">GNPL Hack-A-Thon</h1>
               <p class="intro-text">Great Neck Library's Inaugural Hackathon!</p>
               <p class="intro-text">March 1st - March 2nd 2019</p> -->
               <!-- <a href="#about" class="btn btn-circle page-scroll">
@@ -113,7 +114,7 @@
     <section id="about" class="container content-section text-center">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>GNPL Hackathon 2019</h2>
+          <h2>GNPL Hack-A-Thon 2019</h2>
           <h3>3/1/19 - 3/2/19</h3>
           <p>Welcome to Great Neck Library's inaugural hackathon! This year's focus will be on </p>
 
@@ -131,7 +132,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Participantes do 1˚ GNPL Hackathon</h4>
+                  <h4 class="modal-title" id="myModalLabel">Participantes do 1˚ GNPL Hack-A-Thon</h4>
                 </div>
                 <div class="modal-body">
                   João Victor Mota do Nascimento</br>
