--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
     <section id="about" class="container content-section text-center">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>GNL Hack-A-Thon 2019</h2>
-          <h3>3/1/19 - 3/2/19</h3>
-          <p>Welcome to Great Neck Library's inaugural hackathon! This year's focus will be on </p>
+          <h1>GNL Hack-A-Thon</h1>
+          <h2>March 1st - March 2nd, 2019</h2>
+          <h2><a href="https://docs.google.com/forms/d/1IFQr4Zns95AMdqPfHgCqrEn-vY4hrYbg536SxPnb--0/edit" target="_blank">Register Here!</a></h2>
+            <!-- <p><a href="http://www.matrixlabs.ai/contact.html">put link to get in touch here</a> -->
+          <p>Welcome to Great Neck Library's inaugural hackathon! Rest of description blurb to come...</p>
 
           <!-- <p>As inscrições estão abertas à todos os participantes da XVII SIECOMP e devem ser feitas através do nosso <a href="https://goo.gl/forms/tvWTE4Dml3IRjMGn2">formulário de inscrição</a>. Durante todo o hackathon o time do GNL Brasil e seus parceiros estarão dando apoio técnico, mentoria e ideação.</p>
 
