removed coc tab and placed pdf at bottom of page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <a class="page-scroll" href="#projects">FAQ</a>
             </li>
             <li>
-              <a class="page-scroll" href="#location">Code of Conduct</a>
+              <a class="page-scroll" href="#location">Sponsors</a>
             </li>
             <li>
               <a class="page-scroll" href="#contact">Contact</a>
@@ -117,7 +117,6 @@
           <h1>GNL Hack-A-Thon</h1>
           <h2>March 1st - March 2nd, 2019</h2>
           <h2><a href="https://docs.google.com/forms/d/1IFQr4Zns95AMdqPfHgCqrEn-vY4hrYbg536SxPnb--0/edit" target="_blank">Register Here!</a></h2>
-            <!-- <p><a href="http://www.matrixlabs.ai/contact.html">put link to get in touch here</a> -->
           <p>Welcome to Great Neck Library's inaugural hackathon! Rest of description blurb to come...</p>
 
           <!-- <p>As inscrições estão abertas à todos os participantes da XVII SIECOMP e devem ser feitas através do nosso <a href="https://goo.gl/forms/tvWTE4Dml3IRjMGn2">formulário de inscrição</a>. Durante todo o hackathon o time do GNL Brasil e seus parceiros estarão dando apoio técnico, mentoria e ideação.</p>
@@ -289,6 +288,7 @@
     <footer>
       <div class="container text-center">
         <p>Copyright &copy; GNPL 2019</p>
+        <p><a href="https://devfe.st/Code%20of%20Conduct%202019.pdf" target="_blank">Code of Conduct</a></p>
       </div>
     </footer>
 
