updated schedule section

--- a/index.html
+++ b/index.html
@@ -249,55 +249,55 @@
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
-            <h2>Schedule</h2>
-            <p>3/1/19 to 3/2/19</p>
+            <h1>Schedule</h1>
+            <!-- <p>3/1/19 to 3/2/19</p> -->
             <div class="agenda">
               <div class="row">
-                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">16/03/2017 - 8:30am</div>
-                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">LABOTEC III - Laboratório de Redes</div>
-                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Apresentação do Hackathon</div>
+                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">03/01/19 - 4:00pm</div>
+                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">Doors open (only Friday, open at 6 p.m. on Saturday)</div>
+                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Room: LEVELS</div>
               </div>
             </div>
             <div class="agenda">
               <div class="row">
-                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">16/03/2017 - 9:00am</div>
-                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">LABOTEC III - Laboratório de Redes</div>
-                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Início do Hackathon</div>
+                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">03/01/19 - 6:00pm</div>
+                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">Official Start of GNL Hack-A-Thon!</div>
+                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Room: LEVELS</div>
               </div>
             </div>
             <div class="agenda">
               <div class="row">
-                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">16/03/2017 - 10:30am</div>
-                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">LABOTEC III - Laboratório de Redes</div>
-                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Limite para envio do time e projeto</div>
+                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">03/01/19 - 12:00am</div>
+                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">Day 1 Finish</div>
+                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Room: LEVELS</div>
               </div>
             </div>
             <div class="agenda">
               <div class="row">
-                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">16/03/2017 - 11:30am</div>
-                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">LABOTEC III - Laboratório de Redes</div>
-                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Limite para envio do link do GitHub</div>
+                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">03/02/19 - 6:00pm</div>
+                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">Day 2 Start</div>
+                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Room: LEVELS</div>
               </div>
             </div>
             <div class="agenda">
               <div class="row">
-                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">17/03/2017 - 1:30pm</div>
-                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">LABOTEC III - Laboratório de Redes</div>
-                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Limite para publicação e envio de link do App</div>
+                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">03/02/19 - 10:00pm</div>
+                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">Deadline to Finish Working/Hacking Ends!</div>
+                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Room: LEVELS</div>
               </div>
             </div>
             <div class="agenda">
               <div class="row">
-                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">17/03/2017 - 3:30pm</div>
-                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">Palco Principal (Auditório 4)</div>
-                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Início da Pitch Session</div>
+                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">03/02/19 - 10:00pm to 12:00am</div>
+                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">Project Judging, Awards, and Closing Ceremony</div>
+                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Room: LEVELS</div>
               </div>
             </div>
             <div class="agenda">
               <div class="row">
-                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">17/03/2017 - 4:10pm</div>
-                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">Palco Principal (Auditório 4)</div>
-                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Premiação do Hackathon</div>
+                <div class="when col-lg-4 col-md-4 col-sm-12 col-xs-12">03/02/19 - 12:00am</div>
+                <div class="where col-lg-4 col-md-4 col-sm-12 col-xs-12">End of GNL Hack-A-Thon!</div>
+                <div class="what col-lg-4 col-md-4 col-sm-12 col-xs-12">Room: LEVELS</div>
               </div>
             </div>
           </div>
