updated FAQ section

--- a/index.html
+++ b/index.html
@@ -50,12 +50,20 @@
   height: 110px; 
 }
 
+.column1 {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 310px; 
+}
+
 /* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
+
     </style>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -98,6 +106,9 @@
             <li>
               <a class="page-scroll" href="#projects">FAQ</a>
             </li>
+            <!-- <li>
+              <a class="page-scroll" href="#location">Location</a>
+            </li> -->
             <li>
               <a class="page-scroll" href="#location">Sponsors</a>
             </li>
@@ -137,14 +148,6 @@
           <h2>March 1st - March 2nd, 2019</h2>
           <h2><a href="https://docs.google.com/forms/d/1IFQr4Zns95AMdqPfHgCqrEn-vY4hrYbg536SxPnb--0/edit" target="_blank">Register Here!</a></h2>
           <p>Welcome to Great Neck Library's inaugural hackathon! Rest of description blurb to come...</p>
-
-          <!-- <p>As inscrições estão abertas à todos os participantes da XVII SIECOMP e devem ser feitas através do nosso <a href="https://goo.gl/forms/tvWTE4Dml3IRjMGn2">formulário de inscrição</a>. Durante todo o hackathon o time do GNL Brasil e seus parceiros estarão dando apoio técnico, mentoria e ideação.</p>
-
-          <p><strong>Desafio:</strong> Construa um app para o <a href="http://creator.matrix.one">MATRIX Creator</a> que ajude a melhorar o dia-a-dia das pessoas no qual use pelo menos três recursos da <a href="https://matrix-io.github.io/matrix-documentation/">API do MATRIX Cretor</a> e uma API de qualquer serviço externo de sua escolha.</p>
-
-          <p><strong>Prêmio:</strong> O time vencedor receberá 1 kit MATRIX Creator e R$ 500 reais de servidor na AbsamHost. O segundo lugar receberá 1 kit MATRIX Creator. O terceiro colocado receberá R$ 250 reais de servidor na AbsamHost. Cada kit MATRIX Creator conta com: MATRIX Creator + Raspberry Pi 3 + Raspberry Pi Câmera V2 + Cartão de Memória de 32GB + Fonte de Alimentação.</p>
-
-          <p><a href="#modal" data-toggle="modal">Confira a lista dos selecionados!</a></p> -->
 
           <!-- Modal -->
           <div class="modal fade" id="modal" tabindex="-1" role="dialog" >
@@ -305,13 +308,69 @@
       </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="darker-black content-section">
+    <!-- FAQ Section -->
+    <section id="generalRules" class="darker-black content-section text-center ">
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
-            <h2 class="text-center">FAQs</h2>
-                      </div>
+            <h1>FAQ</h1>
+
+            <div class="row">
+              <div class="column1">
+                <p>What’s a Hackathon?</p>
+              </div>
+              <div class="column1">
+                <p>Hackathons provide a venue for self-expression and creativity through technology. People with technical backgrounds come together, form teams around a problem or idea, and collaboratively code a unique solution from scratch — these generally take shape in the form of websites, mobile apps, and robots.</p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="column1">
+                <p>Who can participate?</p>
+              </div>
+              <div class="column1">
+                <p>Any student from the Great Neck community, grades 7 - 12, can register and participate in the hackathon. Even if you are unable to register for the hackathon ahead of time, all walk-ins will be welcome to participate. However, if you are able to, please register so you may be placed on a team!</p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="column1">
+                <p>Do I need experience?</p>
+              </div>
+              <div class="column1">
+                <p>Students of ALL experience levels are welcome! Whether you're a designer, coder, tinkerer or somewhere in-between, there will be dedicated events and mentors to ease your way through your first hackathon experience. If you've never programmed before, feel free to follow any of the Learn tracks!</p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="column1">
+                <p>Do I have to come for the entire 2 days?
+                </p>
+              </div>
+              <div class="column1">
+                <p>Attending both days of the hackathon is not mandatory. Students may attend either days of the event, or both days. To maximize the amount of time spent working with your team and on your projects, it is encouraged that students be there for both days.</p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="column1">
+                <p>Will there be food?</p>
+              </div>
+              <div class="column1">
+                <p>Yes, food will be provided for all of the participants of both days of the event. If you have any food related allergies, please make sure to notify us when registering for the hackathon. It is also strongly recommended that you bring some of your own snacks and drinks as you might get hungry or thirsty throughout the event.</p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="column1">
+                <p>Do I need a team or an idea to sign up?</p>
+              </div>
+              <div class="column1">
+                <p>Nope! Just come with a willingness to learn something new :) We encourage people to work in teams of up to four. If you can't find a team beforehand, worry not. We'll have a team-formation event at the beginning of the hackathon for the participants who are not already on a team.</p>
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
     </section>
@@ -321,9 +380,10 @@
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
-            <h2>Location</h2>
+            <h1>Location</h1>
             <p>Great Neck Public Library <strong>Levels</strong></p>
             <!-- insert picture of library here -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22620.896032876357!2d-73.75336777847785!3d40.8043483277611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c289807543906b%3A0x79b08b5ca507a016!2sGreat+Neck+Library!5e0!3m2!1sen!2sus!4v1550439342021" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -334,8 +394,8 @@
     <section id="contact" class="darker-black container content-section text-center">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>GNPL Levels</h2>
-          <p>Feel free to get in touch with us.</p>
+          <h1>Contact</h1>
+          <p>Interested in participating in GNL Hack-A-Thon, but have more questions? Know someone who'd make a great judge? Is your company interested in sponsoring us? Send us a line at </p>
           <p><a href="http://www.matrixlabs.ai/contact.html">put link to get in touch here</a>
           </p>
         </div>
