updated sponsors and contact sections

--- a/index.html
+++ b/index.html
@@ -98,19 +98,16 @@
               <a class="page-scroll" href="#about">About</a>
             </li>
             <li>
-              <a class="page-scroll" href="#generalRules">Learn</a>
+              <a class="page-scroll" href="#learn">Learn</a>
             </li>
             <li>
               <a class="page-scroll" href="#schedule">Schedule</a>
             </li>
             <li>
-              <a class="page-scroll" href="#projects">FAQ</a>
+              <a class="page-scroll" href="#FAQ">FAQ</a>
             </li>
-            <!-- <li>
-              <a class="page-scroll" href="#location">Location</a>
-            </li> -->
             <li>
-              <a class="page-scroll" href="#location">Sponsors</a>
+              <a class="page-scroll" href="#sponsors">Sponsors</a>
             </li>
             <li>
               <a class="page-scroll" href="#contact">Contact</a>
@@ -190,7 +187,7 @@
     </section>
 
     <!-- Learn Section -->
-    <section id="generalRules" class="darker-black content-section text-center ">
+    <section id="learn" class="darker-black content-section text-center ">
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
@@ -309,7 +306,7 @@
     </section>
 
     <!-- FAQ Section -->
-    <section id="generalRules" class="darker-black content-section text-center ">
+    <section id="FAQ" class="darker-black content-section text-center ">
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
@@ -375,15 +372,12 @@
       </div>
     </section>
 
-    <!-- Location Section -->
-    <section id="location" class="content-section text-center">
+    <!-- Sponsors Section -->
+    <section id="sponsors" class="content-section text-center">
       <div class="download-section">
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
-            <h1>Location</h1>
-            <p>Great Neck Public Library <strong>Levels</strong></p>
-            <!-- insert picture of library here -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22620.896032876357!2d-73.75336777847785!3d40.8043483277611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c289807543906b%3A0x79b08b5ca507a016!2sGreat+Neck+Library!5e0!3m2!1sen!2sus!4v1550439342021" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <h1>Sponsors</h1>
           </div>
         </div>
       </div>
@@ -395,9 +389,8 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <h1>Contact</h1>
-          <p>Interested in participating in GNL Hack-A-Thon, but have more questions? Know someone who'd make a great judge? Is your company interested in sponsoring us? Send us a line at </p>
-          <p><a href="http://www.matrixlabs.ai/contact.html">put link to get in touch here</a>
-          </p>
+          <p>Interested in participating in GNL Hack-A-Thon, but have more questions? Know someone who'd make a great judge? Is your company interested in sponsoring us? Send an email to <a href="mailto:ahinz@greatnecklibrary.org" target="_top">Adam Hinz</a></p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22620.896032876357!2d-73.75336777847785!3d40.8043483277611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c289807543906b%3A0x79b08b5ca507a016!2sGreat+Neck+Library!5e0!3m2!1sen!2sus!4v1550439342021" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </section>
